<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Войти"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="@color/TitleColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Имя:"
            android:textSize="24dp"
            android:textColor="@color/TitleColor"/>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите имя" />

        <TextView
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:text="Пароль:"
            android:textColor="@color/TitleColor"
            android:textSize="24dp" />


        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите пароль"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/inputBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/btnColor"
            android:text="Войти" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="У Вас до сих пор нет учетной записи? Создайте её сейчас:"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/TitleColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Имя:"
            android:textSize="24dp"
            android:textColor="@color/TitleColor"/>

        <EditText
            android:id="@+id/createName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите имя" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Пароль:"
            android:textSize="24dp"
            android:textColor="@color/TitleColor"/>

        <EditText
            android:id="@+id/createPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите пароль"
            android:inputType="textPassword" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Повторите пароль:"
            android:textSize="24dp"
            android:textColor="@color/TitleColor"/>

        <EditText
            android:id="@+id/doubleCreatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите пароль ещё раз"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registrationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/btnColor"
            android:text="Зарегистрироваться" />
    </LinearLayout>
</ScrollView>

