<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backColor">

    <TextView
        android:id="@+id/userString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="end"
        android:text="Вход не выполнен. Войти"
        android:textAlignment="textEnd"
        android:textColor="@color/TitleColor"
        android:textSize="22dp" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp">
    <Button
        android:id="@+id/newWordBtn"
        android:text="Новое слово"
        style="@style/ButtonOnMain"/>
    <Button
        android:id="@+id/openListBtn"
        android:text="Открыть список категорий"
        style="@style/ButtonOnMain"
        />
    <Button
        android:id="@+id/learningBtn"
        android:text="Обучение"
        style="@style/ButtonOnMain"/>
    <Button
        android:id="@+id/exitBtn"
        android:text="Выход"
        style="@style/ButtonOnMain"/>
</LinearLayout>
</LinearLayout>