<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="MainActivity">
        <item
            android:id="@+id/action_autorizregistr"
            android:title="Вход/Регистрация"
            android:checked="true" />
        <item
            android:id="@+id/exit"
            android:title="Выйти из учетной записи"
            android:checked="true"/>
        <item
            android:id="@+id/action_settings"
            android:title="Настройки"
            android:checked="true" />
        <item
            android:id="@+id/help"
            android:title="Помощь"
            android:checked="true" />
</menu>